CON-865 Build enclaves using Java 16
# Changes
Build enclaves with JDK 17, to target Java 16.

* Bump OpenJDK and LabsJDK in the `sgxjvm-build` container
* Upgrade nexus IQ to 1.131
* Add `--add-opens` flags to enable running `nexus-iq-cli.jar` with Java 17
* Add stub for native function `fgetxattr`
* Update target compatibility settings applied to enclave module by Gradle plugin
* Add `--add-exports` flag to native image options to work around https://github.com/oracle/graal/issues/3875